메인페이지

--- a/index.html
+++ b/index.html
@@ -15,190 +15,221 @@
 </head>
 <body>
     <header>
-        <h1><img src="./images/ci-w_re.png" alt="대원그룹로고"></h1>
-        <div class="h_right">
-            <a href="#">문의</a>
-            <div class="language">
-                <em>KR</em>
-                <img src="./images/down.png" alt="언어바꿈버튼">
-            </div>
-            <button type="button"><img src="./images/search.png" alt="검색하기버튼"></button>
-            <div class="menu_btn">
-                <span></span>
-                <span></span>
-                <span></span>
+        <div class="h_all">
+            <h1><a href="#"><img src="./images/logo/logo_whiht.png" alt="대원그룹로고"></a></h1>
+            <div class="h_right">
+                <a href="#" class="inquiry">문의</a>
+                <div class="language">
+                    <em>KR</em>
+                    <button type="button" id="lang_btn"><img src="./images/down.png" alt="언어바꿈버튼"></button>
+                    <a href="#" class="english">EN</a>
+                </div>
+                <button type="button" id="search_btn"><img src="./images/icon_search.png" alt="검색하기버튼"></button>
+                <button type="button" class="menu_btn">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
             </div>
         </div>
-        <nav class="menu">
-            <div class="closer">
+        <div class="menu_all">
+            <button type="button" class="closer">
                 <span></span>
                 <span></span>
-            </div>
-            <ul>
-                <li>
-                    <em>대상소개</em>
-                    <ul>
-                        <li>Respect Tree</li>
-                        <li>CI</li>
-                        <li>대상의 역사</li>
-                        <li>계열사현황</li>
-                        <li>윤리경영</li>
-                    </ul>
-                </li>
-                <li>
-                    <em>사업소개</em>
-                </li>
+            </button>
+            <nav class="menu">
                 <ul>
-                    <li>식품사업</li>
-                    <li>소재사업</li>
-                    <li>건강&뉴트리션사업</li>
-                    <li>축육&유통사업</li>
-                    <li>인프라&기타사업</li>
+                    <li>
+                        <span>대상소개</span>
+                        <ul>
+                            <li>Respect Tree</li>
+                            <li>CI</li>
+                            <li>대상의 역사</li>
+                            <li>계열사현황</li>
+                            <li>윤리경영</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span>사업소개</span>
+                        <ul>
+                            <li>식품사업</li>
+                            <li>소재사업</li>
+                            <li>건강&뉴트리션사업</li>
+                            <li>축육&유통사업</li>
+                            <li>인프라&기타사업</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span>IR</span>
+                        <ul>
+                            <li>재무정보</li>
+                            <li>IR자료실</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span>그룹소식</span>
+                        <ul>
+                            <li>대상이야기</li>
+                            <li>NEWS</li>
+                            <li>ESG</li>
+                        </ul>
+                    </li>
                 </ul>
-                <li>
-                    <em>IR</em>
-                    <ul>
-                        <li>재무정보</li>
-                        <li>IR자료실</li>
-                    </ul>
-                </li>
-                <li>
-                    <em>그룹소식</em>
-                    <ul>
-                        <li>대상이야기</li>
-                        <li>NEWS</li>
-                        <li>ESG</li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+            </nav>
+        </div>
     </header>
     <main>
-        <button type="button" id="scrolltop"><img src="./images/up_arrow_gray.png" alt="스크롤버튼"></button>
+        <button type="button" id="scrolltop"><img src="./images/top.png" alt="스크롤버튼"></button>
         <div class="first">
-            <img src="./images/mouse_withe.png" alt="마우스스크롤">
+            <img src="./images/mouse_whiht.png" alt="마우스스크롤">
+            <video src="./video/daesang.mp4" autoplay muted loop></video>
         </div>
         <div class="second"><!-- bgimg -->
-            <div class="s_top">
-                <div class="s_title">
-                    <p>DAESANG Respect Tree</p>
-                    <p>대상은 <em>존중의 힘</em>으로 <em>건강한 세상을</em> 만들어 갑니다</p>
+            <div class="second_all">
+                <div class="s_top">
+                    <div class="s_title">
+                        <p>DAESANG Respect Tree</p>
+                        <p>대상은 <em>존중의 힘</em>으로 <em>건강한 세상을</em> 만들어 갑니다</p>
+                        <p>Respect Tree는 대상그룹이 창조하는 모든 가치의 시작인 경영이념에서 시작됩니다.<br>대상그룹의 브랜드 아이덴티티를 반영한 행동방식을 통해 브랜드 미션을 달성하는 가치 체계로,<br>보다 견고하고 지속성 높은 대상그룹이 되기 위한 이정표가 될 것입니다.</p>
+                    </div>
+                    <div class="animation">
+                        <img src="./images/animation_rotate.png" alt="play_animatiom">
+                        <img src="./images/play.png" alt="">
+                    </div>
                 </div>
-                <img src="./images/" alt="play_animatiom">
+                <ul class="s_btm">
+                    <li>
+                        <a href="#" class="management">
+                            <div class="manag_title">
+                                <h2>경영이념</h2>
+                                <img src="./images/hotpink_arrow.png" alt="페이지이동하기">
+                            </div>
+                            <p>대상의 존중과 가치<br>경영이념을 소개합니다.</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="ci">
+                            <div class="ci_title">
+                                <h2>CI</h2>
+                                <img src="./images/orangi_arrow.png" alt="페이지이동하기">
+                            </div>
+                            <p>대상그룹을 대표하는<br>심볼 마크를 소개합니다. </p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="esg">
+                            <div class="esg_title">
+                                <h2>ESG</h2>
+                                <img src="./images/green_arrow.png" alt="페이지이동하기">
+                            </div>
+                            <p>지속가능한 세상을 위한<br>대상그룹의 노력을 전합니다.</p>
+                        </a>
+                    </li>
+                </ul>
             </div>
-            <ul class="s_btm">
-                <li>
-                    <a href="#" class="management">
-                        <div class="manag_title">
-                            <h2>경영이념</h2>
-                            <img src="" alt="페이지이동하기">
-                        </div>
-                        <p>대상의 존중과 가치<br>경영이념을 소개합니다.</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="ci">
-                        <div class="ci_title">
-                            <h2>CI</h2>
-                            <img src="" alt="페이지이동하기">
-                        </div>
-                        <p>대상그룹을 대표하는<br>심볼 마크를 소개합니다. </p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="esg">
-                        <div class="esg_title">
-                            <h2>ESG</h2>
-                            <img src="" alt="페이지이동하기">
-                        </div>
-                        <p>지속가능한 세상을 위한<br>대상그룹의 노력을 전합니다.</p>
-                    </a>
-                </li>
-            </ul>
         </div>
         <div class="third">
-            <p class="t_title">미래의 <em>혁신적인 고민</em>을 하며<br>일류 기업으로 도약합니다.</p>
-            <p>대상그룹의 모든 기업활동의 출발은 고객을 위한 가치 창조에서 시작됩니다.<br>대상그룹은 고객의 신뢰와 사랑을 바탕으로 글로벌 기업으로 나아갑니다.</p>
-            <ul class="contents">
-                <li>
-                    <img src="./images/cutlery.png" alt="식품">
-                    <span>식품</span>
-                </li>
-                <li>
-                    <img src="./images/cutlery.png" alt="소재">
-                    <span>소재</span>
-                </li>
-                <li>
-                    <img src="./images/cutlery.png" alt="유통">
-                    <span>유통</span>
-                </li>
-                <li>
-                    <img src="./images/cutlery.png" alt="건강">
-                    <span>건강</span>
-                </li>
-                <li>
-                    <img src="./images/cutlery.png" alt="인프라">
-                    <span>인프라</span>
-                </li>
-            </ul>
+            <div class="third_all">
+                <p class="t_title">미래의 <em>혁신적인 고민</em>을 하며<br>일류 기업으로 도약합니다.</p>
+                <p>대상그룹의 모든 기업활동의 출발은 고객을 위한 가치 창조에서 시작됩니다.<br>대상그룹은 고객의 신뢰와 사랑을 바탕으로 글로벌 기업으로 나아갑니다.</p>
+                <ul class="contents">
+                    <li>
+                        <div class="contents_color">
+                            <img src="./images/business/food.png" alt="식품">
+                        </div>
+                        <span>식품</span>
+                    </li>
+                    <li>
+                        <div class="contents_color">
+                            <img src="./images/business/material.png" alt="소재">
+                        </div>
+                        <span>소재</span>
+                    </li>
+                    <li>
+                        <div class="contents_color">
+                            <img src="./images/business/distribution.png" alt="유통">
+                        </div>
+                        <span>유통</span>
+                    </li>
+                    <li>
+                        <div class="contents_color">
+                            <img src="./images/business/health.png" alt="건강">
+                        </div>
+                        <span>건강</span>
+                    </li>
+                    <li>
+                        <div class="contents_color">
+                            <img src="./images/business/infrastructure.png" alt="인프라">
+                        </div>
+                        <span>인프라</span>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="fourth">
-            <h2><em>DAESANG</em> NEWS</h2>
-            <ul class="news">
-                <li>
-                    <a href="#">
-                        <img src="./images/news/n2.jpg" alt="뉴스 사진">
-                        <div class="news_contents">
-                            <span>NEWS</span>
-                            <h3>대상그룹</h3>
-                            <p>제 3회 대상그룹 대학생 스마트폰<br>영화제 성료</p>
-                            <strong>2023.07.24</strong>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/news/n2.jpg" alt="뉴스 사진">
-                        <div class="news_contents">
-                            <span>NEWS</span>
-                            <h3>대상홀딩스</h3>
-                            <p>대상웰라이프㈜, 데이터사이언스<br>기업 렉스소프트㈜ 인수 헬...</p>
-                            <strong>2023.07.24</strong>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/news/n2.jpg" alt="뉴스 사진">
-                        <div class="news_contents">
-                            <span>NEWS</span>
-                            <h3>대상웰라이프</h3>
-                            <p>대상웰라이프㈜, 유연한 근무 환경<br>으로 기업문화 혁신 박차…</p>
-                            <strong>2023.07.24</strong>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/news/n2.jpg" alt="뉴스 사진">
-                        <div class="news_contents">
-                            <span>NEWS</span>
-                            <h3>대상주식회사</h3>
-                            <p>대상(주) 알룰로스 직접 생산,<br>군산공장 준공식 열어</p>
-                            <strong>2023.07.24</strong>
-                        </div>
-                    </a>
-                </li>
-            </ul>
+            <div class="fourth_all">
+                <h2><em>DAESANG</em> NEWS</h2>
+                <ul class="news">
+                    <li>
+                        <a href="#">
+                            <img src="./images/news/n_1.jpg" alt="뉴스 사진">
+                            <div class="news_contents">
+                                <span>NEWS</span>
+                                <h3>대상그룹</h3>
+                                <p>제 3회 대상그룹 대학생 스마트폰<br>영화제 성료</p>
+                                <strong>2023.07.24</strong>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./images/news/n_2.jpg" alt="뉴스 사진">
+                            <div class="news_contents">
+                                <span>NEWS</span>
+                                <h3>대상홀딩스</h3>
+                                <p>대상웰라이프㈜, 데이터사이언스<br>기업 렉스소프트㈜ 인수 헬스케어 플랫폼 사업 강화</p>
+                                <strong>2023.07.24</strong>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./images/news/n_3.jpeg" alt="뉴스 사진">
+                            <div class="news_contents">
+                                <span>NEWS</span>
+                                <h3>대상웰라이프</h3>
+                                <p>대상웰라이프㈜, 유연한 근무 환경<br>으로 기업문화 혁신 박차…</p>
+                                <strong>2023.07.24</strong>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./images/news/n_4.jpg" alt="뉴스 사진">
+                            <div class="news_contents">
+                                <span>NEWS</span>
+                                <h3>대상주식회사</h3>
+                                <p>대상(주) 알룰로스 직접 생산,<br>군산공장 준공식 열어</p>
+                                <strong>2023.07.24</strong>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="fifth">
             <div class="f_left">
-                <div class="ir_title">
-                    <h3>IR</h3>
-                    <span></span>
+                <div class="f_left_all">
+                    <div class="ir_title">
+                        <h3>IR</h3>
+                        <span></span>
+                    </div>
+                    <p>대상그룹 함께 <em>성장으로</em><br>나아갈 <em>당신을 초대합니다.</em></p>
+                    <div class="announcement">
+                        <a href="#">공고안내</a>
+                        <img src="./images/right_blue.png" alt="공고안내페이지">
+                    </div>
                 </div>
-                <p>대상그룹 함께 <em>성장으로</em><br>나아갈 <em>당신을 초대합니다.</em></p>
-                <a href="#">공고안내<img src="" alt="공고안내페이지"></a>
             </div>
             <div class="f_right">
                 <div class="finance_title">
@@ -206,15 +237,25 @@
                     <span></span>
                 </div>
                 <p>믿을 수 있는 파트너<br>대상그룹의 사업성과를 소개합니다.</p>
-                <a href="#">재무정보<img src="" alt="재무정보페이지"></a>
+                <div class="finance">
+                    <a href="#">재무정보</a>
+                    <img src="./images/right_blue.png" alt="재무정보페이지">
+                </div>
             </div>
         </div>
     </main>
     <footer>
-        <h1><a href="#"><img src="./images/footer-ci.png" alt="대상그룹로고"></a></h1>
-        <address>대상홀딩스㈜<br>서울특별시 중구 세종대로9길41 퍼시픽타워 2층<br>TEL: 02-2211-6553<br>FAX: 02-2214-6511</address>
-        <p class="copyright">© 2019 DAESANG HOLDINGS. All Rights reserved.</p>
-        <a href="#">계열사 바로가기<img src="" alt="계열사바로가기"></a>
+        <div class="footer_left">
+            <h1><a href="#"><img src="./images/logo/logo_color.png" alt="대상그룹로고"></a></h1>
+            <div class="add_all">
+                <address>대상홀딩스㈜<br>서울특별시 중구 세종대로9길41 퍼시픽타워 2층<br>TEL: 02-2211-6553<br>FAX: 02-2214-6511</address>
+                <p class="copyright">© 2019 DAESANG HOLDINGS. All Rights reserved.</p>
+            </div>
+        </div>
+        <div class="affiliate">
+            <a href="#">계열사 바로가기</a>
+            <img src="./images/right_blue.png" alt="계열사바로가기">
+        </div>
     </footer>
 </body>
 </html>
