--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="keywords" content="대상그룹, 대상, daesang">
     <meta name="description" content="대상그룹은 사람과 자연, 모두가 건강한 세상을 위해 변화와 혁신을 선도하는 기업으로 나아가겠습니다.">
     <!-- favicon -->
-    <link rel="shortcut icon" href="파비콘.ico 경로" type="image/x-icon">
-    <link rel="icon" href="파비콘.ico 경로" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="./images/favicon.png" type="image/x-icon">
     <!-- style -->
     <link rel="stylesheet" href="./style/reset.css">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/common.css">
     <title>대상그룹</title>
 </head>
 <body>
@@ -32,46 +33,56 @@
                 </button>
             </div>
         </div>
+        <div class="searchpage">
+            <fieldset>
+                <legend class="skip">검색하기</legend>
+                <input type="text" id="searchtxt" placeholder="검색어를 입력해주세요" maxlength="16">
+                <button type="button" id="search_closer">
+                    <span></span>
+                    <span></span>
+                </button>
+            </fieldset>
+        </div>
         <div class="menu_all">
-            <button type="button" class="closer">
+            <div class="closer">
                 <span></span>
                 <span></span>
-            </button>
+            </div>
             <nav class="menu">
-                <ul>
+                <ul class="m_all">
                     <li>
-                        <span>대상소개</span>
+                        <a href="./sub1.html">대상소개</a>
                         <ul>
-                            <li>Respect Tree</li>
-                            <li>CI</li>
-                            <li>대상의 역사</li>
-                            <li>계열사현황</li>
-                            <li>윤리경영</li>
+                            <li><a href="#">Respect Tree</a></li>
+                            <li><a href="#">CI</a></li>
+                            <li><a href="#">대상의 역사</a></li>
+                            <li><a href="#">계열사현황</a></li>
+                            <li><a href="#">윤리경영</a></li>
                         </ul>
                     </li>
                     <li>
-                        <span>사업소개</span>
-                        <ul>
-                            <li>식품사업</li>
-                            <li>소재사업</li>
-                            <li>건강&뉴트리션사업</li>
-                            <li>축육&유통사업</li>
-                            <li>인프라&기타사업</li>
+                        <a href="#">사업소개</a>
+                        <ul >
+                            <li><a href="#">식품사업</a></li>
+                            <li><a href="#">소재사업</a></li>
+                            <li><a href="#">건강&뉴트리션사업</a></li>
+                            <li><a href="#">축육&유통사업</a></li>
+                            <li><a href="#">인프라&기타사업</a></li>
                         </ul>
                     </li>
                     <li>
-                        <span>IR</span>
+                        <a href="#">IR</a>
                         <ul>
-                            <li>재무정보</li>
-                            <li>IR자료실</li>
+                            <li><a href="#">재무정보</a></li>
+                            <li><a href="#">IR자료실</a></li>
                         </ul>
                     </li>
                     <li>
-                        <span>그룹소식</span>
+                        <a href="#">그룹소식</a>
                         <ul>
-                            <li>대상이야기</li>
-                            <li>NEWS</li>
-                            <li>ESG</li>
+                            <li><a href="#">대상이야기</a></li>
+                            <li><a href="#">NEWS</a></li>
+                            <li><a href="#">ESG</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -99,7 +110,7 @@
                 </div>
                 <ul class="s_btm">
                     <li>
-                        <a href="#" class="management">
+                        <a href="./sub1.html" class="management">
                             <div class="manag_title">
                                 <h2>경영이념</h2>
                                 <img src="./images/hotpink_arrow.png" alt="페이지이동하기">
@@ -257,5 +268,6 @@
             <img src="./images/right_blue.png" alt="계열사바로가기">
         </div>
     </footer>
+    <script src="./js/script.js"></script>
 </body>
 </html>
