--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
     <!-- style -->
     <link rel="stylesheet" href="./style/reset.css">
     <link rel="stylesheet" href="./style/style.css">
-    <link rel="stylesheet" href="./style/common.css">
     <title>대상그룹</title>
 </head>
 <body>
     <header>
         <div class="h_all">
-            <h1><a href="#"><img src="./images/logo/logo_whiht.png" alt="대원그룹로고"></a></h1>
+            <h1><a href="./index.html"><img src="./images/logo/logo_whiht.png" alt="대원그룹로고"></a></h1>
             <div class="h_right">
                 <a href="#" class="inquiry">문의</a>
                 <div class="language">
@@ -53,8 +52,8 @@
                     <li>
                         <a href="./sub1.html">대상소개</a>
                         <ul>
-                            <li><a href="#">Respect Tree</a></li>
-                            <li><a href="#">CI</a></li>
+                            <li><a href="./sub1.html">Respect Tree</a></li>
+                            <li><a href="./sub2.html">CI</a></li>
                             <li><a href="#">대상의 역사</a></li>
                             <li><a href="#">계열사현황</a></li>
                             <li><a href="#">윤리경영</a></li>
@@ -82,7 +81,7 @@
                         <ul>
                             <li><a href="#">대상이야기</a></li>
                             <li><a href="#">NEWS</a></li>
-                            <li><a href="#">ESG</a></li>
+                            <li><a href="./sub3.html">ESG</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -119,7 +118,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="ci">
+                        <a href="./sub2.html" class="ci">
                             <div class="ci_title">
                                 <h2>CI</h2>
                                 <img src="./images/orangi_arrow.png" alt="페이지이동하기">
@@ -128,7 +127,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="esg">
+                        <a href="./sub3.html" class="esg">
                             <div class="esg_title">
                                 <h2>ESG</h2>
                                 <img src="./images/green_arrow.png" alt="페이지이동하기">
@@ -257,7 +256,7 @@
     </main>
     <footer>
         <div class="footer_left">
-            <h1><a href="#"><img src="./images/logo/logo_color.png" alt="대상그룹로고"></a></h1>
+            <h1><a href="./index.html"><img src="./images/logo/logo_color.png" alt="대상그룹로고"></a></h1>
             <div class="add_all">
                 <address>대상홀딩스㈜<br>서울특별시 중구 세종대로9길41 퍼시픽타워 2층<br>TEL: 02-2211-6553<br>FAX: 02-2214-6511</address>
                 <p class="copyright">© 2019 DAESANG HOLDINGS. All Rights reserved.</p>
