포트폴리오

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- style -->
     <link rel="stylesheet" href="./style/reset.css">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/media.css">
     <title>대상그룹</title>
 </head>
 <body>
