--- a/sub3.html
+++ b/sub3.html
@@ -82,7 +82,7 @@
                         <ul>
                             <li><a href="#">대상이야기</a></li>
                             <li><a href="#">NEWS</a></li>
-                            <li><a href="#">ESG</a></li>
+                            <li><a href="./sub3.html">ESG</a></li>
                         </ul>
                     </li>
                 </ul>
