포폴 수정본

--- a/sub2.html
+++ b/sub2.html
@@ -25,15 +25,9 @@
     <a href="#" id="scrolltop"><img src="./images/top.png" alt="스크롤버튼"></a>
     <header>
         <div class="h_all">
-            <h1><a href="./index.html"><img src="./images/logo/logo_color.png" alt="대원그룹로고"></a></h1>
+            <h1><a href="./index.html"><img src="./images/logo/logo_color_whiht.png" alt="대원그룹로고"></a></h1>
             <div class="h_right">
-                <a href="#" class="inquiry">문의</a>
-                <div class="language">
-                    <em>KR</em>
-                    <button type="button" id="lang_btn"><img src="./images/down_arrow_black.png" alt="언어바꿈버튼"></button>
-                    <a href="#" class="english">EN</a>
-                </div>
-                <button type="button" id="search_btn"><img src="./images/search_black.png" alt="검색하기버튼"></button>
+                <button type="button" id="search_btn"><img src="./images/icon_search.png" alt="검색하기버튼"></button>
                 <button type="button" class="menu_btn">
                     <span></span>
                     <span></span>
@@ -98,6 +92,9 @@
         </div>
     </header>
     <main>
+        <div class="title_bg">
+            <p>다양성을 존중하며 고객과 소통하며<br>국민의 건강을 책임지는 기업 입니다.</p>
+        </div>
         <ul class="page_btn">
             <li><a href="./sub1.html">경영이념</a></li>
             <li><a href="./sub2.html">CI</a></li>
