--- a/sub3.html
+++ b/sub3.html
@@ -21,15 +21,9 @@
     <a href="#" id="scrolltop"><img src="./images/top.png" alt="스크롤버튼"></a>
     <header>
         <div class="h_all">
-            <h1><a href="./index.html"><img src="./images/logo/logo_color.png" alt="대원그룹로고"></a></h1>
+            <h1><a href="./index.html"><img src="./images/logo/logo_color_whiht.png" alt="대원그룹로고"></a></h1>
             <div class="h_right">
-                <a href="#" class="inquiry">문의</a>
-                <div class="language">
-                    <em>KR</em>
-                    <button type="button" id="lang_btn"><img src="./images/down_arrow_black.png" alt="언어바꿈버튼"></button>
-                    <a href="#" class="english">EN</a>
-                </div>
-                <button type="button" id="search_btn"><img src="./images/search_black.png" alt="검색하기버튼"></button>
+                <button type="button" id="search_btn"><img src="./images/icon_search.png" alt="검색하기버튼"></button>
                 <button type="button" class="menu_btn">
                     <span></span>
                     <span></span>
@@ -94,15 +88,15 @@
         </div>
     </header>
     <main>
+        <div class="title_bg">
+            <p>사람과 자연 모두의 존중과 건강을 위한 노력<br><em>대상그룹 ESG 경영</em></p>
+        </div>
         <ul class="page_btn">
             <li><a href="./sub3.html">Environment</a></li>
-            <li><a href="./sub2.html">Social</a></li>
-            <li><a href="./sub1.html">Governance</a></li>
+            <li><a href="#">Social</a></li>
+            <li><a href="#">Governance</a></li>
         </ul>
         <div class="esg_chapter1">
-            <div class="group">
-                <h2>사람과 자연 모두의 존중과 건강을 위한 노력<br><em>대상그룹의 ESG 경영</em></h2>
-            </div>
             <div class="bg1">
                 <img src="./images/bg.png" alt="">
                 <div class="explanation">
